# sprawdzaniesubskrypcji

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  ExcelWriter.cpp  ExcelWriter.h  HTMLParser.cpp  HTMLParser.h  InputHandler.cpp  InputHandler.h  OutputHandler.cpp  OutputHandler.h  html_parser.py  main.cpp  parse_html.py
tests/: ExcelWriterTest.cpp  HtmlParserTest.py  InputHandlerTest.cpp
